--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ article {
   /* border: 2px solid green; */
   width: fit-content;
   display: grid;
-  grid-template-columns: 400px 200px 200px;
+  grid-template-columns: 400px 200px 200px 150px;
   align-items: center;
   border-bottom: 2px solid gray;
 }
@@ -43,5 +43,105 @@ article h3 {
   /* border: 2px solid blue; */
   font-size: 18px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* padding: 0 40px; */
+}
+
+.outOfStock {
+  color: red;
+}
+
+button,
+.btn {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 10px;
+  padding: 10px 20px;
+  color: rgb(255, 248, 254);
+  background-color: rgb(255, 113, 180);
+  width: fit-content;
+  border: none;
+  border-radius: 40px;
+}
+
+button:hover,
+.btn:hover {
+  margin: auto 10px;
+  border: 1px groove rgb(255, 113, 180);
+  cursor: pointer;
+}
+
+.btn {
+  margin: 0;
+}
+
+.btn:hover {
+  margin: 0;
+}
+
+.increase,
+.decrease {
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-size: 16px;
+  color: black;
+  background-color: transparent;
+  border: 1px solid black;
+}
+
+.increase:hover,
+.decrease:hover {
+  color: rgb(211, 79, 141);
+  cursor: pointer;
+}
+
+form {
+  /* border: 2px solid green; */
+  margin: 20px auto;
+  text-align: center;
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 400px 200px 200px 100px;
+  align-items: center;
+  gap: 10px;
+}
+
+input {
+  font-size: 16px;
+  border-radius: 40px;
+  padding: 10px 20px;
+  border: 1px solid gray;
+}
+
+input:hover {
+  border: 1px groove rgb(255, 113, 180);
+  cursor: pointer;
+}
+
+.error {
+  font-size: 12px;
+  display: inline;
+}
+
+@media (max-width: 1100px) {
+  article,
+  form {
+    display: flex;
+  }
+}
+
+@media (max-width: 900px) {
+  form {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 500px) {
+  article {
+    flex-direction: column;
+  }
 }
